--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "rn-nodeify --install http,https,path,crypto,fs,stream,os,assert --hack"
+    "postinstall": "rn-nodeify --install http,https,path,crypto,fs,stream,os,assert,https --hack"
   },
   "dependencies": {
     "@coingrig/core": "1.3.2",
@@ -17,6 +17,7 @@
     "@rainbow-me/animated-charts": "1.0.0-alpha.5",
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-clipboard/clipboard": "1.8.4",
+    "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/bottom-tabs": "6.0.5",
     "@react-navigation/drawer": "6.1.3",
     "@react-navigation/native": "6.0.2",
@@ -32,6 +33,8 @@
     "bignumber.js": "^9.0.1",
     "browserify-sign": "^4.2.1",
     "decimal.js": "10.3.1",
+    "defender-relay-client": "^1.28.1",
+    "ether-converter": "^0.0.16",
     "events": "^3.3.0",
     "https-browserify": "0.0.1",
     "i18next": "20.4.0",
@@ -39,6 +42,7 @@
     "lottie-ios": "3.2.3",
     "lottie-react-native": "4.0.3",
     "md5": "2.3.0",
+    "moment": "^2.29.4",
     "numeral": "2.0.6",
     "path-browserify": "0.0.0",
     "react": "17.0.1",
@@ -54,6 +58,7 @@
     "react-native-device-info": "8.3.1",
     "react-native-dialog": "^9.2.0",
     "react-native-encrypted-storage": "4.0.2",
+    "react-native-expo-fancy-alerts": "^2.1.0",
     "react-native-fast-image": "8.3.7",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "1.10.3",
@@ -88,6 +93,7 @@
     "react-native-touch-id": "4.4.1",
     "react-native-vector-icons": "7.1.0",
     "react-native-walkthrough-tooltip": "^1.4.0",
+    "react-native-webview": "^11.23.0",
     "react-redux": "^7.2.4",
     "readable-stream": "1.0.33",
     "redux": "^4.1.0",
