complete authentication stack

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "asyncstorage-down": "^4.2.0",
     "axios": "0.21.1",
     "bignumber.js": "^9.0.1",
+    "bip39": "^3.0.4",
     "browserify-sign": "^4.2.1",
     "decimal.js": "10.3.1",
     "defender-relay-client": "^1.28.1",
@@ -68,6 +69,7 @@
     "react-native-level-fs": "3.0.1",
     "react-native-localize": "^2.1.6",
     "react-native-logs": "^3.0.4",
+    "react-native-mask-loader": "^0.0.3",
     "react-native-onesignal": "^4.3.4",
     "react-native-os": "1.2.6",
     "react-native-pager-view": "5.4.1",
