--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@coingrig/core": "1.3.2",
     "@coingrig/wallet-generator": "^0.1.7",
+    "@faker-js/faker": "^7.5.0",
     "@haskkor/react-native-pincode": "1.22.6",
     "@rainbow-me/animated-charts": "1.0.0-alpha.5",
     "@react-native-async-storage/async-storage": "^1.15.7",
