--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-iphone-x-helper": "1.3.1",
     "react-native-keychain": "8.0.0",
     "react-native-level-fs": "3.0.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.1.6",
     "react-native-logs": "^3.0.4",
     "react-native-mask-loader": "^0.0.3",
