--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "0.21.1",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
+    "bitcoin-units": "^0.3.0",
     "browserify-sign": "^4.2.1",
     "decimal.js": "10.3.1",
     "defender-relay-client": "^1.28.1",
