--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@walletconnect/client": "^1.6.6",
     "@walletconnect/types": "^1.6.6",
     "@walletconnect/utils": "^1.6.6",
+    "alchemy-sdk": "^2.0.4",
     "assert": "^1.1.1",
     "asyncstorage-down": "^4.2.0",
     "axios": "0.21.1",
