--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "rn-nodeify --install http,https,path,crypto,fs,stream,os,assert,https --hack"
   },
   "dependencies": {
+    "@0x/contract-wrappers": "^13.22.3",
     "@coingrig/core": "1.3.2",
     "@coingrig/wallet-generator": "^0.1.7",
     "@faker-js/faker": "^7.5.0",
@@ -28,7 +29,6 @@
     "@walletconnect/client": "^1.6.6",
     "@walletconnect/types": "^1.6.6",
     "@walletconnect/utils": "^1.6.6",
-    "alchemy-sdk": "^2.0.4",
     "assert": "^1.1.1",
     "asyncstorage-down": "^4.2.0",
     "axios": "0.21.1",
@@ -83,6 +83,7 @@
     "react-native-qrcode-scanner": "1.5.4",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "3.6.1",
+    "react-native-reanimated": "1.13.0",
     "react-native-resegmented-control": "^2.4.0",
     "react-native-restart": "0.0.22",
     "react-native-rss-parser": "^1.5.1",
